[gd_scene load_steps=3 format=3 uid="uid://c8n9m0p1q2r5v"]

[ext_resource type="Script" path="res://view/hud/inventory/inventory_panel.gd" id="1_inventory"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_inventory"]
bg_color = Color(0.08, 0.08, 0.12, 0.97)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.5, 0.85, 0.9, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 8
shadow_color = Color(0.3, 0.6, 0.65, 0.6)
anti_aliasing = true

[node name="InventoryPanel" type="PanelContainer"]
offset_left = 390.0
offset_top = 110.0
offset_right = 890.0
offset_bottom = 610.0
theme_override_styles/panel = SubResource("StyleBoxFlat_inventory")
script = ExtResource("1_inventory")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.95, 1, 1)
theme_override_colors/font_shadow_color = Color(0.2, 0.4, 0.45, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 28
text = "Inventory"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(1, 0.6, 0.6, 1)
theme_override_colors/font_hover_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 20
text = "[X]"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/separator = Color(0.5, 0.85, 0.9, 0.5)
theme_override_constants/separation = 15

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ItemsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
